--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,8 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
+relativeurls=true
+
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
@@ -119,7 +121,7 @@ enableGitInfo = false
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
-  math = false
+  math =true
 
   # Highlight.js options
   #   highlight
@@ -155,8 +157,8 @@ enableGitInfo = false
   #   For more info on the highlighting options, see:
   #   https://gcushen.github.io/hugo-academic-demo/post/writing-markdown-latex/#highlighting-options
   highlight = true
-   highlight_languages = ["r","python"]
-  # highlight_style = "github"
+  highlight_languages = ["r","python"]
+  highlight_style = "zenburn"
   # highlight_version = "9.9.0"
 
   # Enable native social sharing buttons?
@@ -276,15 +278,20 @@ enableGitInfo = false
 #  url = "#projects"
 #  weight = 4
 
-#[[menu.main]]
-#  name = "Teaching"
-#  url = "#teaching"
-#  weight = 5
+[[menu.main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 5
+
+[[menu.main]]
+  name="Professional Service"
+  url = "#service"
+  weight=6
 
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
 
 # Taxonomies.
 #[taxonomies]
