--- a/config.toml
+++ b/config.toml
@@ -252,6 +252,11 @@ enableGitInfo = false
     icon_pack = "fa"
     link = "//github.com/webbedfeet"
 
+  [[params.social]]
+    icon = "linkedin"
+    icon_pack = "fa"
+    link = "https://www.linkedin.com/in/abhijit-dasgupta-70197713/"
+
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
