Moved teaching to new page

--- a/config.toml
+++ b/config.toml
@@ -289,13 +289,9 @@ enableGitInfo = false
 
 [[menu.main]]
   name = "Teaching"
-  url = "#teaching"
+  url = "teaching"
   weight = 5
 
-[[menu.main]]
-  name="Professional Service"
-  url = "#service"
-  weight=6
 
 [[menu.main]]
   name = "Contact"
