--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@
 baseurl = "/"
 
 # Title of your site
-title = "Abhijit's DataWorld"
+title = "Abhijit Dasgupta"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
