--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ publishDir = "../webbedfeet.github.io"
 disqusShortname = "statbandit"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-118473608-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
