--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ preserveTaxonomyNames = true
 paginate = 10
 relativeurls=true
 
-publishDir = "../webbedfeet.github.io"
+#publishDir = "../webbedfeet.github.io"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "statbandit"
 
