--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://webbedfeet.netlify.com/"
+baseURL = "https://webbedfeet.netlify.com/"
 
 # Title of your site
 title = "Abhijit Dasgupta"
